投稿順最新に並べ替え

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class ="row">
-   <div class="col-md-4"></div>
+   <div class="col-md-4">いいねをした記事や投稿レシピを確認するには本登録がおすすめ！</div>
    <div class="col-md-4">
    <h2>Sign up</h2>
 
@@ -34,9 +34,9 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
 <%= render "devise/shared/links" %>
 </div>
 <div class="col-md-4">
+
 </div>
 </div>
