--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -4,12 +4,12 @@
   <div class = "col-md-3">
    <%= image_tag @post_image.image, :size =>'200x200' %>
    <p><%= @post_image.recipe_name %></p>
-   <p>材料</p>
+   <p><材料></p>
    <% @post_image.ingredients.each do |ingredient| %>
      <p><%= ingredient.name %>
    <% end %>
 
-   <p>作り方</p>
+   <p><作り方></p>
     <% @post_image.captions.each do |caption| %>
     <p><%= caption.caption %></p>
    <% end %>
