--- a/app/views/post_images/_list.html.erb
+++ b/app/views/post_images/_list.html.erb
@@ -22,17 +22,14 @@
         <td><%= post_image.recipe_name %></td>
          <!--ユーザーネーム・ユーザー写真--->
          <td><%= post_image.user.name %><%= image_tag post_image.user.get_profile_image(50,50) %></td>
-
                               <%# byebug %>
          <td>
           <div id="favorite_btn_<%= post_image.id %>"><%= render partial: 'favorites/favorite',locals: {post_image: post_image} %></div>
          </td>
-         <td><%= link_to "#{post_image.post_comments.count} コメント",post_image_path(post_image.id) %>
-         <%# if current_user.admin? && !current_user?(user) %>
-         <%# end %>
+         <td>
+          <%= link_to "#{post_image.post_comments.count} コメント",post_image_path(post_image.id) %>
          </td>
        </tr>
        <% end %>
      </table>
     </tbody>
- <%#= paginate post_images %>
