--- a/app/views/ranks/_rank.html.erb
+++ b/app/views/ranks/_rank.html.erb
@@ -17,7 +17,7 @@
               <% end %>
           </td>
           <td><%= post_image.recipe_name %></td>
-          <td><div id display:inline;="favorite_btn_<%= post_image.id %>"><%= render partial: 'favorites/favorite',locals: {post_image: post_image} %></div></td>
+          <td><div id ="favorite_btn_<%= post_image.id %>"><%= render partial: 'favorites/favorite',locals: {post_image: post_image} %></div></td>
           <td><%= link_to "#{post_image.post_comments.count} コメント",post_image_path(post_image.id) %></td>
       </tr>
       <% end %>
