--- a/app/views/admins/post_images/index.html.erb
+++ b/app/views/admins/post_images/index.html.erb
@@ -25,26 +25,11 @@
         <td><%= post_image.recipe_name %></td>
          <!--ユーザーネーム・ユーザー写真--->
          <td><%= post_image.user.name %><%= image_tag post_image.user.get_profile_image(50,50) %></td>
-         <td>作り方:<%= post_image.caption %></td>
+
                               <%# byebug %>
-         <td><%# if current_user.own?(post_image) %>
-              <%#= link_to "削除",post_image_path(@post_image_id),method: :delete %>
-              <%#= post_image.favorites.count %>
-             <%# else %>
-              <%# if post_image.favorited_by?(current_user) %>
-              <%#= link_to post_image_favorites_path(post_image) do %>
-               ♥<%= post_image.favorites.count %>いいね
-              <%# end %>
-
-              <%# else %>
-             <%#= link_to post_image_favorites_path(post_image),method: :post do %>
-               <%#= post_image.favorites.count %>
-            <%# end %>
-
-           <%# end %>
-         </td>
+         <td>♥<%= post_image.favorites.count %>いいね</td>
          <td><%= link_to "#{post_image.post_comments.count} コメント",admins_post_image_path(post_image.id) %></td>
-         <td><%#= link_to "削除",admins_post_image_path(@post_image.id),method: :delete %></td>
+         <td></td>
        </tr>
        <% end %>
      </table>
