--- a/app/views/admins/post_images/show.html.erb
+++ b/app/views/admins/post_images/show.html.erb
@@ -4,9 +4,15 @@
   <div class = "col-md-3">
    <%= image_tag @post_image.image, :size =>'200x200' %>
    <p>料理名:<%= @post_image.recipe_name %></p>
-   <p>材料:<%= @post_image.ingredient %></p>
-   <p>作り方:<%= @post_image.caption %> </p>
+   <p><材料></p>
+   <% @post_image.ingredients.each do |ingredient| %>
+     <p><%= ingredient.name %></p>
+   <% end %>
 
+   <p><作り方></p>
+    <% @post_image.captions.each do |caption| %>
+      <p><%= caption.caption %></p>
+   <% end %>
   </div>
   <div class = "col-md-4">
    <p><%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
@@ -19,14 +25,10 @@
      <p><%= image_tag post_comment.user.get_profile_image(10,10) %>
       <%= post_comment.user.name %>
       <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
-      <%# if post_comment.user == current_user %>
       <%= link_to "削除",post_image_post_comment_path(post_comment.post_image,post_comment), method: :delete %>
-      <%# end %>
   <% end %>
   </p>
   <div>
-
-
    <%= form_with model:[@post_image, @post_comment] do |f| %>
     <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %></div>
     <%= f.submit "送信する" %>
