--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<!--ユーザーの詳細-->
+<!--マイページ-->
 <div class="container">
  <div class="row">
   <div class = "col-md-3">
@@ -8,7 +8,6 @@
    <%= render 'users/favorites',user: @user,favorite_post_images: @favorite_post_images %>
    <!--ユーザーの投稿一覧-->
    <%= render 'post_images/list',post_images: @post_images %>
-
-  </div>
   </div>
  </div>
+</div>
