--- a/app/views/admins/post_images/show.html.erb
+++ b/app/views/admins/post_images/show.html.erb
@@ -1,6 +1,7 @@
+ <!--レシピ投稿詳細画面-->
 <div class="container">
  <div class="row">
-  <div class = "col-md-3"><%#= render 'users/list',user: @user,post_image: @post_image %> </div>
+  <div class = "col-md-3"></div>
   <div class = "col-md-3">
    <%= image_tag @post_image.image, :size =>'200x200' %>
    <p>料理名:<%= @post_image.recipe_name %></p>
@@ -19,22 +20,21 @@
     <%= link_to "削除",post_image_path(@post_image.id),method: :delete %>
     ♥<%= @post_image.favorites.count %>いいね
 
-
-  <p>コメント件数:<%= @post_image.post_comments.count %></p>
-  <% @post_image.post_comments.each do |post_comment| %>
+   <p>コメント件数:<%= @post_image.post_comments.count %></p>
+    <% @post_image.post_comments.each do |post_comment| %>
      <p><%= image_tag post_comment.user.get_profile_image(10,10) %>
       <%= post_comment.user.name %>
       <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
       <%= link_to "削除",post_image_post_comment_path(post_comment.post_image,post_comment), method: :delete %>
-  <% end %>
-  </p>
+    <% end %>
+     </p>
   <div>
    <%= form_with model:[@post_image, @post_comment] do |f| %>
     <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %></div>
     <%= f.submit "送信する" %>
    <% end %>
 
-<div class = "col-md-2"></div>
-</div>
-</div>
+   <div class = "col-md-2"></div>
+  </div>
+ </div>
 </div>
